Make java compile program better on resources and performance